--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta charset="utf-8">
     <title>fusion-tables-data</title>
 
-    <script src="../platform/platform.js"></script>
+    <script src="../webcomponentsjs/webcomponents.js"></script>
     <link rel="import" href="fusion-tables-data.html">
 
     <style>
